# resvg_nif

./: .formatter.exs  .gitignore  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  mix.exs
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
lib/: resvg.ex
lib/resvg/: native.ex  options.ex
livebooks/: example.livemd
native/resvg/: Cargo.toml
native/resvg/src/: lib.rs
test/: resvg_test.exs
test/support/: cloud-from-buf.png.diff.html
