[package]
name = "resvg"
version = "0.1.0"
# We don't use versioning in the in this crate.
# Please check the `mix.exs` file at the root of this project for the current version.
edition = "2018"

[lib]
name = "resvg"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
resvg = "0.41.0"
svgtypes = "0.14"
rustler = "0.32.1"
tiny-skia = "0.10"
usvg = "0.35.0"
