[package]
name = "resvg"
version = "0.1.0"
# We don't use versioning in the in this crate.
# Please check the `mix.exs` file at the root of this project for the current version.
edition = "2018"

[lib]
name = "resvg"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
resvg = "0.44.0"
svgtypes = "0.15"
rustler = "0.36.0"
tiny-skia = "0.11"
usvg = "0.44.0"
